<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2016 Google Inc. All Rights Reserved.
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">SuggestBot</string>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="listening">Listening…</string>
    <string name="load_file">Load file</string>


    <!--  BluetoothChat -->
    <string name="reset">Reset</string>
    <string name="menu">Connect</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_item_detail">Item Detail</string>


<!-- empalink -->
    <string name="accel">Accelerometers</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">BVP</string>
    <string name="eda_label">EDA</string>
    <string name="ibi_label">IBI</string>
    <string name="emptyText">----</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>

    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="stop_monitoring">stop monitoring</string>
    <string name="start_monitoring">start monitoring</string>
    <string name="waiting_for_raw_signal">waiting for raw signal...</string>
    <string name="waiting_for_blink_signal">waiting for blink signal...</string>
    <string name="waiting_for_meditation_signal">waiting for meditation signal...</string>
    <string name="waiting_for_attention_signal">waiting for attention signal...</string>
    <string name="waiting_for_state">waiting for state...</string>
</resources>
